Irritating x scrollbar issue resolved

--- a/Using ForEach in Web Page/style.css
+++ b/Using ForEach in Web Page/style.css
@@ -4,23 +4,51 @@
     box-sizing: border-box;
 }
 #background{
-height: 100vh;
-width: 100vw; 
-background: linear-gradient(180deg,rgba(255, 0, 144, 0.1),rgba(176, 97, 255, 0.7));
+padding-top: 4em;
+min-height: 100vh;
+width: 100%; 
+background-color: #ebf5ff;
 display: flex;
-justify-content: space-around;
+flex-direction: column;
+place-items: center;
 }
-#navbar{
+#controlbox{
+    height: 15vh;
     width: 100%;
-    height: 10%;
+    background-color: #233449;
+    position: fixed;
+    bottom: 0;
     display: flex;
-    place-items: center;
-    padding: 0px 20px 0px 20px;
-    background-color: aliceblue;
+    justify-content: space-evenly;
+    align-items: center;
 }
-#logo{
+
+.button{
     height: 2.5em;
-    width: 2.5em;
-
+    min-width:10em;
+    border: 0px;
+    border-radius: 0.4em;
+    font-size: 1em;
+    font-weight: bold;
+    font-family:monospace;
+    color: rgba(0, 0, 0, 0.4);
+    background-color: white;
+    transition: 0.4s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button:hover{
+    color: black;
+    background: #ffba00;
 }
 
+.item{
+    min-height: 20vh;
+    max-height: fit-content;
+    width: 80vw;
+    background: linear-gradient(180deg, rgb(255, 0, 144), rgb(128, 0, 255));
+    border: 0px;
+    border-radius: 0.5em;
+    margin-top: 0.7em;
+}
